gitops/apps/hello-test-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-test-app
  labels:
    app.kubernetes.io/name: hello-test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-test-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-test-app
    spec:
      containers:
        - name: hello-test-app
          image: hello-test-app:d93b2f30a8de104bb5cd3bab35179ab901b17df0
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet: { path: /healthz, port: http }
          livenessProbe:
            httpGet: { path: /healthz, port: http }
          resources:
            requests: { cpu: 10m, memory: 32Mi }
            limits: { cpu: 100m, memory: 64Mi }
