gitops/apps/hello-test-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-test-app
  labels:
    app.kubernetes.io/name: hello-test-app
spec:
  selector:
    app.kubernetes.io/name: hello-test-app
  ports:
    - name: http
      port: 80
      targetPort: http
